[Fix]: Mensajes de error y estándares JPA en el módulo Publicaciones PublicationRequestDTO en el Commons sin campo de status
